--- a/page/inventaire/inventaire.css
+++ b/page/inventaire/inventaire.css
@@ -15,7 +15,7 @@
     justify-content: center;
     align-items: center;
     background-color: #3A86FF;
-    position: absolute;
+    position: fixed;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
@@ -108,7 +108,7 @@
 
 #inventaireSlotText{
     font-size: 1.2vw;
-    position: absolute;
+    position: fixed;
     bottom: 0.5vw;
     background-color:#3E4246 ;
     color: #fff;
