--- a/page/skills/skills.css
+++ b/page/skills/skills.css
@@ -15,8 +15,8 @@ body {
 
 /* skills-menu */
 
-.skills-menu{
-    height: 80vh;
+.skills-menu {
+    height: 90vh;
     width: 80vw;
     margin-left: 50%;
     transform: translateX(-50%);
@@ -32,6 +32,43 @@ body {
     border-radius: 2vw
 }
 
+.skills-menu-name {
+    font-size: 2.3vw;
+    font-family: 'Avalon', sans-serif;
+    text-transform: uppercase;
+}
+
+.skills-menu-name__previous,
+.skills-menu-name__next {
+    cursor: pointer;
+    width: 2vw;
+    height: 2vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: none;
+    padding: 0%;
+    border: none;
+    outline: none;
+    margin: 0;
+    transition: transform 0.3s;
+}
+
+.skills-menu-name__previous:hover,
+.skills-menu-name__next:hover {
+    transform: scale(1.2);
+}
+
+.previous__img,
+.next__img {
+    width: 3vw;
+    height: 3vw;
+}
+
+.previous__img {
+    transform: rotate(180deg);
+}
+
 
 /* skill-card */
 
@@ -44,12 +81,22 @@ body {
     background-color: #3A86FF;
     padding: 1vw;
     cursor: pointer;
-    width: 2.5vw;
-    height: 2.5vw;
+    width: 2vw;
+    height: 2vw;
+    position: relative;
+    box-shadow: #333333 0 0 0.5vw;
+    transition: transform 0.3s;
+}
+
+.skill:hover,
+.skill-passive:hover,
+.skill-passive-link:hover {
+    transform: scale(1.1);
+    box-shadow: #333333 0 0 1vw;
 }
 
 .skill {
-    border-radius: 1.5vw;
+    border-radius: 1vw;
 }
 
 .skill-passive {
@@ -57,9 +104,33 @@ body {
     border: #fff solid 0.2vw;
 }
 
-.skill__img {
-    width: 2.5vw;
-    height: 2.5vw;
+
+.skill__description-container{
+    position: absolute;
+    left: -16vw;
+    top: 0;
+    background-color: #292a319b;
+    border-radius: 1vw;
+    padding: 1vw;
+    width: 13vw;
+}
+
+.skill__title{
+    font-size: 1.2vw;
+    height: 400;
+}
+
+.skill__level{
+    font-size: 1vw;
+    font-style: italic;
+    font-weight: 400;
+}
+
+.skill__description{
+    font-size: 0.8vw;
+    font-family: "Roboto", sans-serif;
+    font-style: italic;
+    font-weight: 400;
 }
 
 /* skills-container */
@@ -76,6 +147,7 @@ body {
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    height: 80%;
 }
 
 /* skills-container__left */
@@ -85,14 +157,14 @@ body {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: 65vh;
+    height: 100%;
     width: 35%;
 }
 
 .skills-passive-container,
 .bonus-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     width: 100%;
     background-color: #4A4E69;
@@ -101,11 +173,11 @@ body {
 }
 
 .bonus-container {
-    height: 60%;
+    height: 65%;
 }
 
 .skills-passive-container {
-    height: 38%;
+    height: 30%;
 }
 
 .skill-passive-skills-container {
@@ -119,18 +191,53 @@ body {
 .skills-passive-container__name,
 .skills-container__name {
     font-size: 1.5vw;
+    line-height: 1vw;
+}
+
+.bonus-container__bonus {
+    margin-left: 2.5vw;
+    margin-right: 2.5vw;
+
+}
+
+.bonus__name {
+    font-size: 1vw;
+    font-family: "Roboto", sans-serif;
+    text-transform: capitalize;
+    font-size: 1.5vw;
+    font-weight: 800;
+    margin-bottom: 1vw;
+    position: relative;
+}
+
+.bonus__name::after {
+    position: absolute;
+    content: "";
+    width: 80%;
+    height: 0.2vw;
+    background-color: #ffffff5e;
+    bottom: -0.3vw;
+    left: 0;
+    border-radius: 3px;
+}
+
+.bonus__description {
+    font-size: 1vw;
+    font-family: "Roboto", sans-serif;
+    font-style: italic;
+    font-weight: 400;
 }
 
 /* skills-container__right */
 
 .skills-container__right {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
     background-color: #4A4E69;
     width: 45vw;
-    height: 65vh;
+    height: 100%;
     border-radius: 2vw;
 }
 
