--- a/style.css
+++ b/style.css
@@ -309,3 +309,27 @@ a:hover{
 .footer-button__img {
     width: 1vw;
 }
+
+/* bandeau-info-importante */
+
+.bandeau-info-importante{
+    position: absolute;
+    bottom: 2vw;
+    left: 0;
+    width: 100%;
+    height: 5vw;
+    background-color: #d93c3c96;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.8vw;
+    font-weight: bold;
+}
+
+.info-importante__text{
+    font-family: 'Roboto', sans-serif;
+    margin-left: 3vw;
+    margin-right: 3vw;
+    text-align: center;
+}
