--- a/page/skills/skills.css
+++ b/page/skills/skills.css
@@ -10,7 +10,7 @@
 
 body {
     color: #fff;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 /* skills-menu */
@@ -272,6 +272,11 @@ body {
     cursor: pointer;
 }
 
+
+.skill__img{
+    width: 100%;
+    height: 100%;
+}
 
 /* entree */
 
