--- a/page/page jeux/almanach des portail/almanach.css
+++ b/page/page jeux/almanach des portail/almanach.css
@@ -1,7 +1,9 @@
 #almanach{
     display: none;
-    position: absolute;
+    position: fixed;
     z-index: 3000;
+    top: 0;
+    left: 0;
 }
 
 .container-livre{
